# aurora-audioworks

./: .gitattributes  .gitignore  CMakeLists.txt  conanfile.py  moe.smoothie.audioworks.desktop  moe.smoothie.audioworks.pro
lib/ffmpeg/arm64/: ffmpeg.tar  source.txt
lib/ffmpeg/x86_64/: ffmpeg.tar  source.txt
lib/lame/arm64/: lame.tar
lib/lame/x86_64/: lame.tar
lib/pydub/: audio_segment.py  logging_utils.py  utils.py
qml/: moe.smoothie.audioworks.qml
qml/pages/: About.qml  FirstPage.qml  SavePage.qml
qml/py/: audiox.py
rpm/: moe.smoothie.audioworks.spec
src/: main.cpp
translations/: moe.smoothie.audioworks-de.ts  moe.smoothie.audioworks-ru.ts  moe.smoothie.audioworks-sv.ts  moe.smoothie.audioworks-zh_CN.ts  moe.smoothie.audioworks.ts
